tests/error/comptime_expr_errors/guppy_name1.err
Error: Not compile-time evaluatable (at $FILE:6:20)
  | 
4 | @compile_guppy
5 | def foo(x: int) -> int:
6 |     return comptime(x + 1)
  |                     ^ Guppy variable `x` cannot be accessed in a comptime
  |                       expression

Guppy compilation failed due to 1 previous error
